--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.8.1
 dj-database-url==3.0.0
 Django==4.2.23
 django-cors-headers==4.7.0
+djangorestframework==3.16.0
 gunicorn==23.0.0
 packaging==25.0
 python-dotenv==1.1.0
